# snoo-huckleberry-sync

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  snoo_diagnostics.py
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-07-05-live-mqtt-session-tracking.md
docs/superpowers/specs/: 2026-07-05-live-mqtt-session-tracking-design.md
sync/: __init__.py  config.py  dedupe.py  find_child_uids.py  huckleberry_sink.py  live_source.py  models.py  runner.py  session_builder.py  snoo_source.py  ssl_helper.py
tests/: conftest.py  test_config.py  test_dedupe.py  test_formatting.py  test_huckleberry_sink.py  test_live_source.py  test_runner.py
