[project]
name = "snoo-huckleberry-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-snoo",
    "huckleberry-api",
    "aiohttp",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true  # python-snoo / huckleberry-api have no stubs
